# langchain-timbr

./: .fossa.yml  .gitignore  README.md  chain_monitoring_plan.md  pyproject.toml  requirements.txt  requirements310.txt  requirements311.txt
.github/workflows/: _lint.yml  fossa.yml  install-dependencies-and-run-tests.yml  publish.yml
src/langchain_timbr/: __init__.py  benchmark_cli.py  config.py  timbr_llm_connector.py
src/langchain_timbr/langchain/: execute_timbr_query_chain.py  generate_answer_chain.py  generate_timbr_sql_chain.py  identify_concept_chain.py  timbr_sql_agent.py  validate_timbr_sql_chain.py
src/langchain_timbr/langgraph/: execute_timbr_query_node.py  generate_response_node.py  generate_timbr_sql_node.py  identify_concept_node.py  validate_timbr_query_node.py
src/langchain_timbr/llm_wrapper/: llm_wrapper.py  timbr_llm_wrapper.py
src/langchain_timbr/ontology_context/context_builder/: build_filtered.py  rebuild.py  validator.py
src/langchain_timbr/ontology_context/context_builder/prompts/: filter_prompt.py
src/langchain_timbr/technical_context/: __init__.py  config.py  modes.py  semantic_type.py  types.py
src/langchain_timbr/technical_context/assembly/: multi_match.py  per_column.py  trimming.py
src/langchain_timbr/technical_context/extraction/: llm.py  ngram.py
src/langchain_timbr/technical_context/matching/: ahocorasick_matcher.py  exact.py  normalize.py  rapidfuzz_matcher.py
src/langchain_timbr/technical_context/statistics_loader/: __init__.py  config.py  inheritance.py  loader.py  logic_query.py  mapping_resolver.py  ontology_cache.py  path_parser.py  stats_cache.py  stats_fetcher.py  stats_merger.py  stats_parser.py  types.py
src/langchain_timbr/utils/: _base_chain.py  benchmark.py  chain_logger.py  general.py  memory.py  prompt_service.py  timbr_llm_utils.py  timbr_utils.py
tests/: conftest.py
tests/integration/: test_agent_integration.py  test_chain_pipeline.py  test_chain_reasoning.py  test_dynamic_metadata_context_integration.py  test_langchain_chains.py  test_memory_chains.py  test_technical_context_integration.py
tests/integration/statistics_loader/: conftest.py  test_dtimbr_end_to_end.py  test_failure_modes.py  test_logic_recursion.py  test_vtimbr_end_to_end.py
tests/standard/: test_benchmark.py  test_benchmark_integration.py  test_connection_validation.py  test_langgraph_checkpoint.py  test_memory.py  test_multi_ontology.py  test_sanitize_results.py  test_standard_chain_requirements.py  test_unit_tests.py
tests/standard/ontology_context/context_builder/: test_concept_prefilter.py  test_metadata_config.py  test_rebuild.py
tests/standard/statistics_loader/: conftest.py  test_inheritance.py  test_load_column_statistics.py  test_logic_query.py  test_mapping_resolver.py  test_ontology_cache.py  test_path_parser.py  test_stats_cache.py  test_stats_fetcher.py  test_stats_merger.py  test_stats_parser.py
tests/standard/technical_context/: test_technical_context_assembly.py  test_technical_context_config.py  test_technical_context_llm_extraction.py  test_technical_context_matching.py  test_technical_context_semantic_type.py  test_technical_context_stats.py  test_technical_context_types.py
