[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "langchain-timbr"
dynamic = ["version"]
description = "LangChain & LangGraph extensions that parse LLM prompts into Timbr semantic SQL and execute them."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [{ name = "Timbr.ai", email = "contact@timbr.ai" }]
keywords = ["LLM", "LangChain", "LangGraph", "Timbr", "Semantic Layer", "Knowledge Graph", "SQL", "Agents"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "pydantic~=2.12.5",
  "tiktoken~=0.8.0",
  "uvicorn~=0.34.0",
  "pytimbr-api~=2.1.1",
  "langchain~=1.2.10",
  "langchain-core~=1.2.13",
  "langchain-community~=0.3.30",
  "langgraph~=1.0.8",
  "langgraph-checkpoint~=3.0.0",
  "cryptography~=46.0.5",
  "transformers~=4.57.0",
]

[project.optional-dependencies]
openai = [
  "openai~=2.1.0",
  "langchain-openai~=0.3.34",
]
azure_openai = [
  "azure-identity~=1.25.0",
  "openai~=2.1.0",
  "langchain-openai~=0.3.34",
]
anthropic = [
  "anthropic~=0.81.0",
  "langchain-anthropic~=1.3.3",
]
google = [
  "google-generativeai~=0.8.4",
  "langchain-google-genai~=4.2.0",
]
vertex_ai = [
  "google-generativeai~=0.8.4",
  "langchain-google-vertexai~=2.1.2",
]
snowflake = [
  "opentelemetry-api~=1.38.0; python_version<'3.12'",
  "opentelemetry-sdk~=1.38.0; python_version<'3.12'",
  "snowflake~=1.8.0",
  "snowflake-snowpark-python~=1.45.0",
  "snowflake-connector-python[pandas]~=4.3.0",
]
databricks = [
  "databricks-langchain~=0.7.1",
  "databricks-sdk~=0.64.0",
]
bedrock = [
  "langchain-aws~=1.2.5",
]

# Development and testing
dev = [
  "pytest~=8.3.4",
  "langchain-tests~=0.3.22",
]

# All optional dependencies
all = [
  "anthropic~=0.81.0",
  "azure-identity~=1.25.0",
  "databricks-langchain~=0.7.1",
  "databricks-sdk~=0.64.0",
  "google-generativeai~=0.8.4",
  "jiter~=0.11.1",
  "langchain-anthropic~=1.3.3",
  "langchain-aws~=1.2.5",
  "langchain-google-genai~=4.2.0",
  "langchain-google-vertexai~=2.1.2",
  "langchain-openai~=0.3.34",
  "langchain-tests~=0.3.22",
  "openai~=2.1.0",
  "opentelemetry-api~=1.38.0; python_version<'3.12'",
  "opentelemetry-sdk~=1.38.0; python_version<'3.12'",
  "pytest~=8.3.4",
  "snowflake~=1.8.0",
  "snowflake-snowpark-python~=1.45.0",
  "snowflake-connector-python[pandas]~=4.3.0",
]

[project.urls]
Homepage = "https://github.com/WPSemantix/langchain-timbr"
Documentation = "https://docs.timbr.ai/doc/docs/integration/langchain-sdk/"
Source = "https://github.com/WPSemantix/langchain-timbr"
Issues = "https://github.com/WPSemantix/langchain-timbr/issues"

[tool.hatch.version]
source = "vcs"                                          # version comes from git

[tool.hatch.build.hooks.vcs]
version-file = "src/langchain_timbr/_version.py"        # generate a version file

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_timbr"]

